# mlt

./: .gitignore  .gitmodules  CMakeLists.txt  bootstrap.py
cmake/: Makefile
src/examples/: CMakeLists.txt
src/framework/: CMakeLists.txt  mlt_consumer.h  mlt_log.h
src/mlt++/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/modules/avformat/: CMakeLIsts.txt  consumer_avformat.c  producer_avformat.c
src/modules/core/: CMakeLists.txt  filter_audiochannels.c
src/modules/sdl/: consumer_sdl_audio.c
src/modules/sdl2/: CMakeLists.txt  consumer_sdl2.c
